- Improved: Simplified order insert tags code
- Improved: Addresses can now optionally be labelled by the customer (#2051 and #2052)
- Improved: The isotope folder now gets generated on-the-fly (#2044)
- Improved: SKU must now be unique
- Improved: Tax rates now have more flexible postal code settings
- Improved: make arrCache data available in product template (#2340)
- Fixed: radio button events in Internet Explorer (Ticket #484)
- Fixed: products DCA not loaded in rare cases
- Fixed: hide customer definied fields in product edit mode
- Fixed: low price calculation for advanced prices
- Fixed: sorting by module configuration (#2037)
- Fixed: backend category sorting, updated DC_TablePageId driver (#2101)
- Fixed: invisible subgroups when no product in parent group (#2121)
- Fixed: potential issue in email addresses (#2041)
- Fixed: invalid markup in several templates (#2081)
- Fixed: related products loaded from product cache (#2236)
- Fixed: product cache not considering product start date (#2230)
- Fixed: issue with variant generator and prices (#2046)
- Fixed: copy/paste of product variants into its own product
- Fixed: order of country and states (#2486)
- Fixed: replace $ in mootools with document.id for isotope.js and backend.js (#2200)
- Fixed: assignment of uniqid in ModuleIsotopeCheckout::writeOrder() (#2531)
- Fixed: Added: missing comma after "sortBy" field in tl_iso_attributes
- Fixed: Checkout gives an error on single quotes (#2576)
- Fixed: Shipment template does not show forms (#2479)
- Fixed: Sorting is ambiguous in ModuleIsotopeProductList.php (#2697)
- Fixed: Non-Admins cannot create a product type (#2261)
- Fixed: Order Id doesn't get incremented (#2222)
- Fixed: SQL condition in product list is wrong (#2189)
- Fixed: "Edit multiple" does not work in Internet Explorer (#2680)
- Fixed: Invoice PDF had no title when printing (#2036)
- Fixed: Isotope::formatValue will throw error if not page category selected on a product (#2699)